; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_block_if.c_blockif_psectsz.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_block_if.c_blockif_psectsz.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blockif_ctxt = type { i64, i32, i32 }

@BLOCKIF_SIG = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @blockif_psectsz(%struct.blockif_ctxt* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.blockif_ctxt*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.blockif_ctxt* %0, %struct.blockif_ctxt** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.blockif_ctxt*, %struct.blockif_ctxt** %4, align 8
  %8 = getelementptr inbounds %struct.blockif_ctxt, %struct.blockif_ctxt* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @BLOCKIF_SIG, align 8
  %11 = icmp eq i64 %9, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load %struct.blockif_ctxt*, %struct.blockif_ctxt** %4, align 8
  %15 = getelementptr inbounds %struct.blockif_ctxt, %struct.blockif_ctxt* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = load i32*, i32** %5, align 8
  store i32 %16, i32* %17, align 4
  %18 = load %struct.blockif_ctxt*, %struct.blockif_ctxt** %4, align 8
  %19 = getelementptr inbounds %struct.blockif_ctxt, %struct.blockif_ctxt* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %6, align 8
  store i32 %20, i32* %21, align 4
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
